--- a/research.qmd
+++ b/research.qmd
@@ -147,9 +147,9 @@ palBD <- colorFactor(domain = biodiversity$RANK, palette = 'Spectral')
 The @fig-BiodiversityMap shows the areas of high and low biodiversity in SoCal. I incorporated a legend, color palette, and used the Positron Tile layer instead of OSM.
 
 ```{r}
-#| label: fig-BiodiversityMap
+#| label: Not working figure on the render
 #| echo: true
-#| eval: true
+#| eval: false
 #| fig-cap: Figure caption
 
 leaflet() |> 
